src/components/organisms/NewProfileModal/components/header/ProfileModalAvatar/ProfileModalAvatar.scss
@import "../../../profileModalStyles";

$upload-new-background: rgba($white, 0.2);
$upload-new-padding: 0.3rem;

.ProfileModalAvatar {
  display: flex;
  flex-direction: column;
  align-items: center;
  &__upload-new-container {
    position: relative;
    @include square-size(6.2rem);
  }

  &__upload-new {
    backdrop-filter: $input-backdrop-filter;
    background: $upload-new-background;
    border-radius: $input-border-radius;
    padding: $upload-new-padding;
    cursor: pointer;
    position: absolute;
    white-space: nowrap;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-shadow: $input-text-shadow;
    color: $white;
    font-weight: $font-weight--500;
    &--uploading {
      color: $light-grey--lightest;
      cursor: unset;
    }
  }

  &__input {
    display: none;
  }

  &__error {
    margin-top: 0.5rem;
    color: $input--invalid;
  }
}

